# earthshadow

./: README.md  demo.ipynb  earthshadow.py  pyproject.toml  requirements.txt  setup.cfg  tests.py
.github/workflows/: run-tests.yml
src/: earthshadow.py
tests/: test_shadow.py
