[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[options]
install_requires = [
    'numpy',
    'astropy',
    'matplotlib',
]

[project]
name = "earthshadow"
version = "1.0.0"
authors = [
  { name="Guy Nir", email="guynir42@gmail.com" },
]
description = "An astropy-based package to find the coordinates of the Earth's shadow."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/guynir42/earthshadow"
"Bug Tracker" = "https://github.com/guynir42/earthshadow/issues"
