[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "earthshadow"
version = "1.0.5"
authors = [
  { name="Guy Nir", email="guynir42@gmail.com" },
]
description = "An astropy-based package to find the coordinates of the Earth's shadow."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "astropy",
    "matplotlib",
]

[project.urls]
"Homepage" = "https://github.com/guynir42/earthshadow"
"Bug Tracker" = "https://github.com/guynir42/earthshadow/issues"

[tool.setuptools]
py-modules = [
    "earthshadow",
]
package-dir = {""= "src"}
