[metadata]
name = my-package
description = "An astropy-based package to find the coordinates of the Earth's shadow."
long_description = file: README.rst
author = Guy Nir
author_email = guynir42@gmail.com
url = "https://github.com/guynir42/earthshadow"
license = MIT License

[options]
zip_safe = False
packages = find:
install_requires =
    numpy
    astropy
    matplotlib
